# transformers-playground

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  unsloth_wrapper_tst.py  versionCheck.py
Prasanna-SmolLM-360M/: README.md
src/: text.ipynb
src/FFN/: GELU.py  RELU.py  SILU.py  SWIGLU.py  __init__.py
src/attention/: GQA.py  MHA.py  MQA.py  __init__.py  kv_cache.py  rope.py
src/config/: __init__.py  config.py  train.py
src/customTransformers/: __init__.py  blocks.py  decodeTransfomer.py
src/customtokenizer/: SFTDataset.py  StoryQADataset.py  __init__.py  playground.ipynb
src/eval/: config.py
src/fine-tune/: test.py
src/finetune/: adapters.py  infer.py  test.py
src/infer/: __init__.py  infer.py
src/logs/: final_ckpt_step_0030000.json
src/models/my-model/: Dockerfile  deploy.sh  fineTune.py  infer.py  journey.md  play.ipynb  raw_knowledge.txt  slothInfer.py  slothTune.py  test.py
src/models/my-model/data/: train.jsonl
src/models/seek-code/: test.py
src/models/tiny-stories/: __init__.py  eval.md  finetune.md  finetune.py  infer.py  readme.md  train.py
src/norm/: __init__.py  batchNorm.py  layerNorm.py  rmsNorm.py
src/pretrain/: __init__.py  inference.py  trainer.py
src/scripts/: dataset-deploy.py  deploy.py  hf-old-conversion.py  hf_deploy.py  migrate_checkpoint.py  pre_training.py  sanity.py  test_script.py  upload_checkpoint_to_gcs.py
src/services/: cloud_storage.py
src/templates/: __init__.py  model_card.py  readme.md
src/transformers/: transformer.py
src/utils/: __init__.py  common.py  hf_wrapper.py  unsloth_wrapper.py
