[project]
name = "transformers-playground"
version = "0.1.0"
description = "Custom transformer model training and deployment toolkit"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Prasanna", email = "prasannajaga9@gmail.com" }
]
keywords = ["transformers", "pytorch", "deep-learning", "nlp", "huggingface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "datasets",
    "transformers>=4.57.6",
    "google-cloud-aiplatform>=1.135.0",
    "google-cloud-storage>=2.14.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
    "accelerate",
    "bitsandbytes>=0.49.1",
]

[project.urls]
Homepage = "https://github.com/Prasannajaga/transformers-playground"
Repository = "https://github.com/Prasannajaga/transformers-playground.git"
Issues = "https://github.com/Prasannajaga/transformers-playground/issues"
Documentation = "https://github.com/Prasannajaga/transformers-playground#readme"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
